conv/conv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv
  template:
    metadata:
      labels:
        app: conv
    spec:
      containers:
        - image: docker.io/gauravity4356/conv:latest
          imagePullPolicy: Always
          name: conv
          ports:
          - containerPort: 8080
