conv/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: conv-svc
spec:
  ports:
  - port: 8356
    protocol: TCP
    targetPort: 8080
  selector:
    app: conv
