conv/conv-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-dev-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conv-dev
  template:
    metadata:
      labels:
        app: conv-dev
    spec:
      volumes:
      - name: conv-data
        persistentVolumeClaim:
          claimName: conv-dev-pvc
      containers:
        - image: docker.io/gauravity4/conv-dev:latest
          imagePullPolicy: Always
          name: conv
          volumeMounts:
            - mountPath: /share
              name: conv-data
          ports:
          - containerPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: conv-dev-route
  namespace: default
spec:
  parentRefs:
    - name: argo-gateway
      namespace: argocd
      sectionName: websecure
  hostnames:
    - conv-dev.internal.gauravity.com
  rules:
    - backendRefs:
        - name: conv-dev-svc
          namespace: default
          port: 8356
---
apiVersion: v1
kind: Service
metadata:
  name: conv-dev-svc
spec:
  ports:
  - port: 8356
    protocol: TCP
    targetPort: 8080
  selector:
    app: conv-dev
